# interview

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_zh.md  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.claude/: settings.json
.claude/rules/: 02-build-and-test.md  07-workflow.md  copyright.md
.cursor/rules/: kosy.mdc
.cursor/rules/basic/: development-workflow.mdc
.cursor/rules/python/: python-dependencies.mdc
.github/: copilot-instructions.md
.github/instructions/: python-coding-standards.instructions.md  workflow.instructions.md
.github/workflows/: darwin-arm64.yml  ubuntu-x64.yml  windows-x64.yml
cmake/: export.cmake  utils.cmake
developers/houchen_li/archives/: julia_set.py
developers/houchen_li/personal_configs/: CMakeUserPresets.json
src/kosy/: CMakeLists.txt  __init__.py  _core.cpp  polynomial.hpp  polynomial.py  polynomial_nb.cpp
src/kosy/utils/: concepts.hpp  type_traits.hpp
tests/kosy/: CMakeLists.txt  calculate_volume.cpp  julia_set.py  julia_set_nb.py  polynomial_test.cpp  test_polynomial.py
