[project]
name = "kosy"
version = "0.1.0"
description = "Interview questions and answers (C++ and Python)."
requires-python = ">=3.14"
dependencies = [
  "cython",
  "loguru",
  "matplotlib",
  "nanobind",
  "numba",
  "numpy",
  "pyqt6",
  "pytest",
  "scipy",
]

[dependency-groups]
dev = [
  "pyright",
  "ruff",
  "ty"
]

[build-system]
requires = ["scikit-build-core", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.31"
ninja.make-fallback = true
editable.mode = "redirect"
wheel.packages = ["src/kosy"]

[tool.uv]
package = true
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]
fixable = ["ALL"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.lint.isort]
known-first-party = ["kosy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.ty.environment]
python-version = "3.14"
python-platform = "linux"

[tool.ty.analysis]
allowed-unresolved-imports = [
  "numba",
  "numba.*",
  "cython",
  "cython.*",
]

[tool.ty.terminal]
error-on-warning = true
